--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,14 @@
+altgraph==0.17.3
 certifi==2023.5.7
 charset-normalizer==3.1.0
 click==8.1.3
 colorama==0.4.6
 gTTS==2.3.2
 idna==3.4
+pefile==2023.2.7
+pyinstaller==5.10.1
+pyinstaller-hooks-contrib==2023.2
 PyMuPDF==1.22.2
+pywin32-ctypes==0.2.0
 requests==2.30.0
 urllib3==2.0.2
